New release STREAMER 2.0 with:
- New functionalities
	- Multi-value problems accepted
	- New collection of metrics
	- More flexible configuration (setup) of environment and algorithms
	- Improved graphical interface (kibana dashboard)
	- Localized code refactorings
	- Templates for python scripts
- New logs files
	- New temporary log file with life messages from the algorithms
	- New metricsLog
- Guides updated
- Optimized system messages
- External services updated
- Bugs resolution