@@ -2,6 +2,8 @@ package cea.util.connectors;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.lang.reflect.InvocationTargetException;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Properties;
 import java.util.Vector;
@@ -22,7 +24,8 @@ import cea.util.Log;
 
 /**
  * Class that makes the connection between Java and InfluxDB
- *
+ * Timestamp is the index key in influxDB
+ * Several records with same time stamp can coexist if they have different tag
  */
 public class InfluxDBConnector {
 
@@ -51,15 +54,6 @@ public class InfluxDBConnector {
 	 */
 	static String password = "root";
 
-	/**
-	 * Relation of the data base
-	 */
-	static String pointMeassurement = "ds";
-
-	/**
-	 * The problem type that indicates the type of data
-	 */
-	static String problemType = "t";
 
 	/**
 	 * Method that initializes the parameters of the connection with the content of
@@ -68,34 +62,17 @@ public class InfluxDBConnector {
 	public static void init() {
 
 		Properties properties = new Properties();
-		try (InputStream props = Resources.getResource("setup/influxDB.props").openStream()) {
+		try (InputStream props = Resources.getResource(GlobalUtils.resourcesPathPropsFiles+"influxDB.props").openStream()) {
 			properties.load(props);
-			dbName = properties.getProperty("dbName").trim();
-			host = properties.getProperty("host").trim();
-			password = properties.getProperty("password").trim();
-			pointMeassurement = properties.getProperty("Point.measurement").trim();
+			dbName = properties.getProperty("dbName").replace(" ","");
+			host = properties.getProperty("host").replace(" ","");
+			password = properties.getProperty("password").replace(" ","");
 		} catch (IOException e1) {
 			e1.printStackTrace();
 		}
-
-		try (InputStream props = Resources.getResource("setup/streaming.props").openStream()) {
-			properties.load(props);
-			problemType = (GlobalUtils.packageTimeRecords + ".") + properties.getProperty("problem.type").trim();
-		} catch (IOException e1) {
-			e1.printStackTrace();
-		}
-
 		openConnection();
-
 	}
 
-	/**
-	 * Method that cleans the database
-	 */
-	public static void cleanDB() {
-		influxDB.deleteDatabase(dbName);
-		influxDB.createDatabase(dbName);
-	}
 
 	/**
 	 * Open a InfluxDB connection
@@ -103,66 +80,79 @@ public class InfluxDBConnector {
 	private static void openConnection() {
 		influxDB = InfluxDBFactory.connect(host, username, password);
 	}
-
+	
 	/**
-	 * Method that writes a vector of time records into InfluxDB
+	 * Method that stores a vector of time records into the database
 	 * 
 	 * @param records the vector of time records
 	 */
-	private static void write(Vector<TimeRecord> records) {
+	public static void store(Vector<TimeRecord> records, String id) {
+		// openConnection();
+		write(records, id);
+		if (Log.showDebug)
+			readDB(id);
+	}
+
+	/**
+	 * Method that writes a vector of time records into InfluxDB
+	 * Timestamp is the index key in influxDB
+	 * Several records with same time stamp can coexist if they have different tag
+	 * 
+	 * @param records the vector of time records
+	 */
+	private static void write(Vector<TimeRecord> records, String id) {
 		// Create a 'batch' of example 'points'
+		
+		String id_db = id.replace("-", "");//it cannot contain "-"
 
 		BatchPoints batchPoints = BatchPoints.database(dbName).tag("async", "true").retentionPolicy("autogen")
-				.consistency(InfluxDB.ConsistencyLevel.ALL).tag("StoreTag", pointMeassurement) // tag each point in the
-																								// batch
+				.consistency(InfluxDB.ConsistencyLevel.ALL).tag("batch_id", id_db) // tag each point in the batch
 				.build();
 
 		for (TimeRecord record : records) {
 			if (Log.showDebug) {
-				System.out.println(" record storing in DB--------------------------->" + record.toString());
+				System.out.println("["+id+"] record storing in DB--------------------------->" + record.toString());
 			}
-			Point.Builder point1 = Point.measurement(pointMeassurement); // tag the individual point;
-			point1 = point1.time(record.getTimeStampMillis(), TimeUnit.MILLISECONDS).tag("source",
-					record.getName().replace("\\", "/"));
+			Point.Builder point1 = Point.measurement(id_db); // tag the individual point;
+			point1 = point1.time(record.getTimeStampMillis(), TimeUnit.MILLISECONDS).tag("source",record.getSource());
+			
+			 //for(String k: record.getValues().keySet()){ point1 =
+			 // point1.addField(k,record.getValues().get(k)); }			 
 
-			/*
-			 * for(String k: record.getValues().keySet()){ point1 =
-			 * point1.addField(k,record.getValues().get(k)); }
-			 */
-
-			point1 = point1.addField("values", record.exportValues());// we store the whole record (timestamp, values,
-																		// etc)
-			if (record.getTarget() != null) {// if it has a target (desired output)
-				point1 = point1.addField("target", record.getTarget());// we store the target
+			//point1 = point1.addField("source", record.getSource());// we store the whole record (timestamp, values,
+			point1 = point1.addField("values", record.exportValues());// we store the whole record (timestamp, values,etc)
+			if (!record.getTarget().isEmpty()) {// if it has a target (expected output)
+				point1 = point1.addField("target", GlobalUtils.listToString(record.getTarget(),record.getSeparatorFieldsRawData()));// we store the target
 			}
 
 			batchPoints.point(point1.build());
 			if (Log.showDebug) {
-				System.out.println("Sending... " + record.fullRecordToString());
+				System.out.println("["+id+"] Sending... " + record.fullRecordToString());
 			}
 		}
 		// Write them to InfluxDB
-		influxDB.write(batchPoints);
+		influxDB.write(batchPoints);	
 	}
 
 	/**
 	 * Method that reads and outputs the data of the problem type from the database
 	 */
-	private static void readDB() {
-		Query query = new Query("SELECT * FROM " + pointMeassurement, dbName);
+	private static void readDB(String id) {
+		String id_db = id.replace("-", "");//it cannot contain "-"
+		Query query = new Query("SELECT * FROM " + id_db, dbName);
 		QueryResult queryResult = influxDB.query(query);
 		// iterate the results and print details
 		for (QueryResult.Result result : queryResult.getResults()) {
 			// print details of the entire result
-			System.out.println(result.toString());
+			System.out.println("["+id+"] "+result.toString());
 
 			if (result.getSeries() != null) {
 				// iterate the series within the result
 				for (QueryResult.Series series : result.getSeries()) {
-					System.out.println("series.getName() = " + series.getName());
-					System.out.println("series.getColumns() = " + series.getColumns());
-					System.out.println("series.getValues() = " + series.getValues().size() + series.getValues());
-					System.out.println("series.getTags() = " + series.getTags());
+					System.out.println("["+id+"] series.getName() = " + series.getName());
+					System.out.println("["+id+"] series.getColumns() = " + series.getColumns());
+					System.out.println("["+id+"] series.getValues() = " + series.getValues().size() + series.getValues());
+					System.out.println("["+id+"] series.getTags() = " + series.getTags());
 				}
 			}
 			System.err.println("No series stored in the DB");
@@ -174,84 +164,116 @@ public class InfluxDBConnector {
 	 * Method that gets the data of the problem type from InfluxDB and puts them
 	 * into a vector of time record
 	 * 
-	 * @param captName the name of the field when the data was stored
+	 * Timestamp is the index key in influxDB
+	 * Several records with same time stamp can coexist if they have different tag
+	 * 
+	 * @param source the name of the field when the data was stored
+	 * @param maximum number of records to store in Influx
+	 * @param isModelUpdatable If it is a model that learns incrementally, only the new data is retreive, 
+	 * 	otherwise the full data (with maxsize limit) is retreived 
 	 * @return the vector of time records
 	 */
-	public static Vector<TimeRecord> getRecordsDB(String captName, long maxdatasize, boolean isModelUpdatable) {
-		captName = captName.replace("\\", "/");
-
+	public static Vector<TimeRecord> getRecordsDB(String id, long maxdatasize, boolean isModelUpdatable) {
+		String id_db = id.replace("-", "");//it cannot contain "-"
 		Vector<TimeRecord> records = new Vector<TimeRecord>();
-		Properties properties = new Properties();
 		Query query = null;
 		if (isModelUpdatable || maxdatasize == -1) {
-			query = new Query("SELECT * FROM " + pointMeassurement + " where source = '" + captName + "'", dbName);
+			query = new Query("SELECT * FROM \"" + id_db+"\"", dbName);
 
 		} else {
-			query = new Query("SELECT * FROM " + pointMeassurement + " where source = '" + captName + "'"
-					+ "order by time DESC" + " limit " + maxdatasize, dbName);
+			query = new Query("SELECT * FROM \"" + id_db+"\" order by time ASC" + " limit " + maxdatasize, dbName);
 		}
 		QueryResult queryResult = influxDB.query(query);
 		
 		// after training the model in online learning algorithms, the data cannot be used anymore for next training phase.
 		if (isModelUpdatable) {
-			cleanDB();
+			//cleanDB();
+			cleanElementsID(id_db);
 		}
-		
+		String origin = id;
+		if (origin.equals("default")) {
+			origin = ".";
+		}
+		Properties properties = new Properties();
+		String problemType=null;
+		try (InputStream props = Resources.getResource(GlobalUtils.resourcesPathPropsFiles+origin+"/streaming.props").openStream()) {
+			properties.load(props);
+			problemType = (GlobalUtils.packageTimeRecords + ".") + properties.getProperty("problem.type").replace(" ","");
+		} catch (IOException e1) {
+			e1.printStackTrace();
+		}
+				
 		// iterate the results and print details
 		for (QueryResult.Result result : queryResult.getResults()) {
 			for (QueryResult.Series series : result.getSeries()) {
 				// get indices of the Columns for a TimeRecord
+				//int indexId = series.getColumns().indexOf("id");
 				int indexSource = series.getColumns().indexOf("source");
 				int indexTime = series.getColumns().indexOf("time");
 				int indexValues = series.getColumns().indexOf("values");
-				int indexTarget = series.getColumns().indexOf("target");// it returns -1 if it does not contain any
-																		// target
+				int indexTarget = series.getColumns().indexOf("target");// it returns -1 if it does not contain any target
 
 				for (List serie : series.getValues()) {// for each time record in the db
 
 					// delete T and Z in timestamp to get a proper format
 					String timestamp = serie.get(indexTime).toString().replace("T", " ").replace("Z", "");
-					// String rec = serie.get(indexName) + ";" + timestamp+ ";" +
-					// serie.get(indexMeassure);
 
 					// construct a TimeRecord object
 					try {
-						Class recC = Class.forName(problemType + "Record");
-						TimeRecord recObj = (TimeRecord) recC.newInstance();
+						Class<?> recC = Class.forName(problemType + "Record");
+						TimeRecord recObj= (TimeRecord) recC.getDeclaredConstructor().newInstance();
+						
 						// recObj.fill(rec);
 						recObj.setSource("" + serie.get(indexSource));
-						recObj.setTimestamp(timestamp);
+						recObj.setTimeStamp(timestamp);
 						recObj.importValues("" + serie.get(indexValues));
-						if (indexTarget != -1) {// there is a target
-							recObj.setTarget("" + serie.get(indexTarget));
+						if (indexTarget != -1) {// if there is a target
+							String target = ""+serie.get(indexTarget);
+							recObj.setTarget(Arrays.asList(target.split(recObj.getSeparatorFieldsRawData())) );
 						}
 						records.add(recObj);
-					} catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+					} catch (ClassNotFoundException | InstantiationException | 
+							IllegalAccessException | IllegalArgumentException | 
+							InvocationTargetException | NoSuchMethodException | SecurityException e) {
 						e.printStackTrace();
 					}
 				}
 			}
 		}
+		System.out.println("["+id+"] "+records.size()+" records for training");					
+
 		return records;
 	}
 
 	/**
+	 * Method that cleans the FULL database
+	 * (by deleting it and creating it again)
+	 */
+	public static void cleanDB() {
+		QueryResult queryResult = influxDB.query(new Query("DROP DATABASE " +dbName)); //delete database
+		queryResult = influxDB.query(new Query("CREATE DATABASE " +dbName)); //create a new one
+	}
+	
+	/**
+	 * Method that cleans the points with id tag
+	 * @param id tag
+	 */
+	public static void cleanElementsID(String id) {
+		String id_db = id.replace("-", "");//it cannot contain "-"
+		try {
+			QueryResult queryResult = influxDB.query(new Query("DELETE FROM \"" +id_db+"\"",dbName)); //deletes all points from a series in a database. Unlike DROP SERIES, DELETE does not drop the series from the index.
+			//QueryResult queryResult = influxDB.query(new Query("DROP SERIES FROM \"" +id_db+"\"",dbName)); //deletes all points from a series in a database, and it drops the series from the index.
+		}catch(Exception e) {
+			e.printStackTrace();
+		}
+	}
+	
+	/**
 	 * Method that deletes the database
+	 * @deprecated
 	 */
 	public static void deleteDB() {
 		influxDB.deleteDatabase(dbName);
-	}
-
-	/**
-	 * Method that stores a vector of time records into the database
-	 * 
-	 * @param records the vector of time records
-	 */
-	public static void store(Vector<TimeRecord> records) {
-		// openConnection();
-		write(records);
-		if (Log.showDebug)
-			readDB();
 	}
 
 }
